tests/lean/quasireducible.lean.expected.out
quasireducible.lean:11:11: error:invalid 'rewrite' tactic, rewrite step failed using pattern
  f a
no subterm in the goal matched the pattern
proof state:
a : nat,
H : f a = a
⊢ g a = a
quasireducible.lean:11:3: error: don't know how to synthesize placeholder
a : nat,
H : f a = a
⊢ g a = a
quasireducible.lean:11:3: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
quasireducible.lean:16:11: error:invalid 'rewrite' tactic, rewrite step failed using pattern
  f a
no subterm in the goal matched the pattern
proof state:
a : nat,
H : f a = a
⊢ g a = a
quasireducible.lean:16:3: error: don't know how to synthesize placeholder
a : nat,
H : f a = a
⊢ g a = a
quasireducible.lean:16:3: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
